# qurbrix-hwinfo

./: .gitignore  2026-07-22_22-33-55-hardware-snapshot-plan.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-1-report.md
crates/hw-api/: Cargo.toml
crates/hw-api/src/: lib.rs
crates/hw-bindid/: Cargo.toml
crates/hw-bindid/src/: collector.rs  devices.rs  key.rs  lib.rs  model.rs
crates/hw-bindid/tests/: collector.rs  devices.rs  key.rs  report.rs
crates/hw-cli/: Cargo.toml
crates/hw-cli/src/: args.rs  exit.rs  lib.rs  main.rs  permission.rs  snapshot.rs
crates/hw-cli/tests/: args.rs
crates/hw-collect/: Cargo.toml
crates/hw-collect/src/: collector.rs  execution.rs  lib.rs  merge.rs  status.rs
crates/hw-collect/tests/: collector.rs  execution.rs
crates/hw-inventory/: Cargo.toml
crates/hw-inventory/migrations/: 0001_initial.sql
crates/hw-inventory/src/: artifact.rs  canonical.rs  diff.rs  error.rs  lib.rs  maintenance.rs  model.rs  probe.rs  service.rs  store.rs
crates/hw-inventory/tests/: maintenance.rs  quick_probe.rs  service.rs  store.rs
crates/hw-merge/: Cargo.toml
crates/hw-merge/src/: lib.rs
crates/hw-model/: Cargo.toml
crates/hw-model/src/: bus.rs  device.rs  driver.rs  evidence.rs  id.rs  kind.rs  lib.rs  properties.rs  report.rs  snapshot.rs
crates/hw-model/tests/: bluetooth_paired_devices.rs  model_serialization.rs
crates/hw-output/: Cargo.toml
crates/hw-output/src/: flat.rs  jsonl.rs  lib.rs  schema.rs  summary.rs  table.rs
crates/hw-output/tests/: output_views.rs
crates/hw-parser/: Cargo.toml
crates/hw-parser/src/: audio.rs  bluetooth.rs  cdrom.rs  cpu.rs  dmi.rs  edid.rs  gpu.rs  input.rs  lib.rs  monitor.rs  network.rs  pci.rs  power.rs  printer.rs  storage.rs  usb.rs  util.rs  video.rs
crates/hw-parser/src/normalize/: arch.rs  board_vendor.rs  cpu_vendor.rs  gpu_vendor.rs  mod.rs  pnp.rs
crates/hw-parser/tests/: bluetooth.rs  cpu_sources.rs  dmi.rs  edid.rs  gpu.rs  monitor_verbose.rs  network.rs  normalize.rs  pci_usb.rs  peripherals.rs  storage.rs
crates/hw-probe/: Cargo.toml
crates/hw-probe/src/: audio.rs  battery.rs  bluetooth.rs  camera.rs  cdrom.rs  context.rs  existing.rs  input.rs  lib.rs  other.rs  pci.rs  printer.rs  result.rs  sysfs_pci.rs  traits.rs  usb.rs
crates/hw-probe/tests/: base_probes.rs  existing_category_probes.rs  peripheral_probes.rs  remaining_category_probes.rs
crates/hw-source/: Cargo.toml
crates/hw-source/src/: cached.rs  command.rs  files.rs  lib.rs  result.rs  runner.rs
crates/hw-source/tests/: cache.rs  fake_runner.rs
crates/hw-store/: Cargo.toml
crates/hw-store/src/: bindid.rs  component.rs  lib.rs  mods.rs  repo.rs
crates/hw-testdata/: Cargo.toml
crates/hw-testdata/fixtures/bluetooth/: hciconfig-a.txt  paired-devices-multi.txt  paired-devices.txt
crates/hw-testdata/fixtures/cpu/: dmidecode-4-dual-socket.txt  lscpu-intel-x86_64.txt  lscpu-loongson-loongarch64.txt  lshw-product-null.txt  proc-cpuinfo-amd-x86_64.txt  proc-cpuinfo-hisilicon-kirin.txt  proc-cpuinfo-hygon.txt  proc-cpuinfo-intel-x86_64.txt  proc-cpuinfo-kunpeng-arm64.txt  proc-cpuinfo-loongarch.txt  proc-cpuinfo-phytium-arm64.txt  proc-cpuinfo-sunway.txt  proc-cpuinfo-zhaoxin.txt
crates/hw-testdata/fixtures/dmi/: dmidecode-t11.txt
crates/hw-testdata/fixtures/edid/: aoc.hex
crates/hw-testdata/fixtures/gpu/: modinfo-nvidia.txt
crates/hw-testdata/fixtures/monitor/: hwinfo-monitor.txt
crates/hw-testdata/fixtures/normalize/: arch.cases.txt  board-vendor.cases.txt  cpu-name-inference.cases.txt  cpu-vendor-id.cases.txt  gpu-vendor-id.cases.txt  gpu-vendor.cases.txt
crates/hw-testdata/fixtures/pci/: lspci-nn-k.txt
crates/hw-testdata/fixtures/power/: upower-dump.txt
crates/hw-testdata/fixtures/printer/: lpstat-a.txt  lpstat-v.txt
crates/hw-testdata/fixtures/proc/: asound-cards.txt  bus-input-devices.txt  cdrom-info.txt
crates/hw-testdata/fixtures/storage/: hwinfo-disk.txt  lsblk-with-usb.json  lsblk.json  lshw-disk.txt  smartctl-nvme-multi-sensor.json  smartctl-nvme.json
crates/hw-testdata/fixtures/usb/: lsusb.txt
crates/hw-testdata/fixtures/video/: v4l2-list-devices.txt
crates/hw-testdata/fixtures/xrandr/: query.txt  verbose.txt
crates/hw-testdata/src/: lib.rs
docs/: cli-output-contract.md  component-gap-report-2026-07-11.md  core-components-gap-report.md  hardware-compatibility-gap-report.md  hardware-compatibility-reference-audit.md  hardware-snapshot-constrained-performance.csv  hardware-snapshot-database-performance.csv  hardware-snapshot-execution-log.md  hardware-snapshot-field-mapping.md  hardware-snapshot-full-scan-performance.csv  hardware-snapshot-golden-vectors.json  hardware-snapshot-performance-baseline.csv  hardware-snapshot-probe-graph.md  hardware-snapshot-quick-probe-baseline.csv  hardware-snapshot-resource-performance.csv  hardware-snapshot-single-core-performance.csv  hardware-snapshot-state-transitions.md  six-components-gap-report-2026-07-09.md
docs/adr/: 0001-hardware-snapshot-v1.md
docs/superpowers/plans/: 2026-07-04-general-purpose-hw-scanner.md  2026-07-05-hardware-compat-p0-p1.md  2026-07-12-p0-gap-closeout.md  2026-07-13-open-source-release-prep.md
docs/superpowers/specs/: 2026-07-04-general-purpose-hw-scanner-design.md  2026-07-05-hardware-compat-p0-p1-design.md  2026-07-11-bindid-design.md  2026-07-12-p0-gap-closeout-design.md  2026-07-13-open-source-release-prep-design.md
examples/: quick_probe_baseline.rs  scan_baseline.rs  scan_constrained.rs  scan_performance.rs
scripts/: check-hardware-snapshot-release.sh  verify-hardware-snapshot-contract.sh
src/: lib.rs  normalize.rs
tests/: cli_contract.rs  facade_exports.rs  hardware_snapshot_contract.rs  readme_snapshot_smoke.rs  workspace_contract.rs
