[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
insta = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "qurbrix-hw"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "qurbrix-hw"
path = "crates/hw-cli/src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hw-collect = { path = "crates/hw-collect" }
hw-cli = { path = "crates/hw-cli" }
hw-model = { path = "crates/hw-model" }
hw-output = { path = "crates/hw-output" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
