[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0-alpha.3"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
insta = "1"
libc = "0.2"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }

[package]
name = "qurbrix-hw"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "qurbrix-hw"
path = "crates/hw-cli/src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
hw-bindid = { path = "crates/hw-bindid" }
hw-collect = { path = "crates/hw-collect" }
hw-inventory = { path = "crates/hw-inventory" }
hw-cli = { path = "crates/hw-cli" }
hw-model = { path = "crates/hw-model" }
hw-output = { path = "crates/hw-output" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
