[package]
name = "hw-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hw-bindid = { path = "../hw-bindid" }
hw-collect = { path = "../hw-collect" }
hw-model = { path = "../hw-model" }
hw-output = { path = "../hw-output" }
libc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
