[package]
name = "hw-collect"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
hw-model = { path = "../hw-model" }
hw-probe = { path = "../hw-probe" }
hw-source = { path = "../hw-source" }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
hw-source = { path = "../hw-source" }
