[package]
name = "hw-inventory"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hex = { workspace = true }
hw-collect = { path = "../hw-collect" }
hw-model = { path = "../hw-model" }
hw-probe = { path = "../hw-probe" }
hw-source = { path = "../hw-source" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = "3"
