[package]
name = "hw-parser"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hw-testdata = { path = "../hw-testdata" }
