[package]
name = "hw-store"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
sha1 = "0.10"
hex = "0.4"
hw-model = { path = "../hw-model" }   # 直接用你已有的数据模型
